# vision-insight-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  openapi.yaml  pyproject.toml  requirements-worker-cuda.txt  requirements-worker.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: install-service.sh  install.sh  setup.sh  start-all.sh  start-workers.sh  stop-all.sh  test-image-gen.sh  test-local.sh  uninstall-service.sh
src/: worker_manager.py
src/core/: config.py  memory.py  supervisor.py
src/gateway/: main.py
src/workers/: base.py  cuda_diffusion_worker.py  diffusion_worker.py  mflux_worker.py  mock_worker.py  vlm_worker.py
